--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintVertical_bias="0.793"
-                    android:fillViewport="true">
+                    android:scrollbars="none">
 
                 <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
