--- a/app/src/main/res/layout/atm_detail.xml
+++ b/app/src/main/res/layout/atm_detail.xml
@@ -8,10 +8,8 @@
         android:layout_height="match_parent"
         tools:context=".ui.activities.ATMDetailsActivity">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
+    <ScrollView
+            android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".ui.detail.BankDetailActivity"
                 android:fillViewport="true">
@@ -148,13 +146,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#0054A6"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:id="@+id/textView7"
                     app:layout_constraintEnd_toEndOf="@+id/map_image"
                     app:layout_constraintStart_toStartOf="@+id/map_image" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/map_image" app:layout_constraintHorizontal_bias="0.565"
-                    app:layout_constraintVertical_bias="0.025"/>
-        </android.support.constraint.ConstraintLayout>
+                    app:layout_constraintTop_toBottomOf="@+id/map_image"
+                    app:layout_constraintVertical_bias="0.008"/>
+            </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.v4.widget.SwipeRefreshLayout>
