--- a/app/src/main/res/layout/atm_list_item.xml
+++ b/app/src/main/res/layout/atm_list_item.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
     <TextView
             android:text="Name"
             android:textColor="#0054A6"
@@ -21,7 +22,7 @@
             tools:ignore="MissingConstraints"/>
     <TextView
             android:text="Address"
-            android:layout_width="200dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:id="@+id/atm_address"
             app:layout_constraintTop_toBottomOf="@+id/atm_name"
@@ -30,8 +31,8 @@
             app:layout_constraintEnd_toEndOf="@+id/atm_name"
             app:layout_constraintHorizontal_bias="0.0"/>
     <ImageView
-            android:layout_width="40dp"
-            android:layout_height="52dp"
+            android:layout_width="35dp"
+            android:layout_height="42dp"
             app:srcCompat="@drawable/ic_directions_black_24dp"
             android:id="@+id/direction_iv"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,10 +40,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.859"
-            app:layout_constraintTop_toTopOf="@+id/call_iv"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
-            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/atm_name"/>
     <TextView
             android:text="GO"
             android:textColor="#0054A6"
@@ -79,6 +79,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             android:scaleType="center"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/time"/>
 
 </android.support.constraint.ConstraintLayout>
