--- a/app/src/main/res/layout/branch_detail.xml
+++ b/app/src/main/res/layout/branch_detail.xml
@@ -74,7 +74,7 @@
                     android:text="Branch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView"
+                    android:id="@+id/type_tv"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -88,8 +88,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="#222020"
                     android:id="@+id/branch_title"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    app:layout_constraintTop_toBottomOf="@+id/type_tv"
+                    app:layout_constraintStart_toStartOf="@+id/type_tv"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="4dp"
@@ -106,7 +106,7 @@
                     android:text="NO(65), LANMADAW ST, NO(2)QTR, PAREIK, KHAYAR QTR, SIN HPYU KYUN"
                     android:layout_width="290dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/agent_address"
+                    android:id="@+id/address_tv"
                     app:layout_constraintStart_toEndOf="@+id/imageView7"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="20dp"
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/agent_address"
+                    app:layout_constraintTop_toBottomOf="@+id/address_tv"
                     android:layout_marginTop="12dp"
                     app:layout_constraintStart_toEndOf="@+id/imageView8"
                     android:layout_marginStart="8dp"
