--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -48,7 +48,7 @@
                             android:layout_weight="1"/>
 
                     <TextView
-                            android:id="@+id/atm_title_tv"
+                            android:id="@+id/title"
                             android:layout_margin="15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
                     android:text="ATM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView"
+                    android:id="@+id/type_tv"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -84,9 +84,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#222020"
-                    android:id="@+id/atm_title"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    android:id="@+id/title_tv"
+                    app:layout_constraintTop_toBottomOf="@+id/type_tv"
+                    app:layout_constraintStart_toStartOf="@+id/type_tv"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="4dp"
@@ -96,18 +96,18 @@
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/ic_place_black_24dp"
                     android:id="@+id/imageView7"
-                    app:layout_constraintTop_toBottomOf="@+id/atm_title"
-                    app:layout_constraintStart_toStartOf="@+id/atm_title"
+                    app:layout_constraintTop_toBottomOf="@+id/title_tv"
+                    app:layout_constraintStart_toStartOf="@+id/title_tv"
                     android:layout_marginTop="20dp"/>
             <TextView
                     android:text="NO(65), LANMADAW ST, NO(2)QTR, PAREIK, KHAYAR QTR, SIN HPYU KYUN"
                     android:layout_width="305dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/agent_address"
+                    android:id="@+id/address_tv"
                     app:layout_constraintStart_toEndOf="@+id/imageView7"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintTop_toBottomOf="@+id/atm_title"
+                    app:layout_constraintTop_toBottomOf="@+id/title_tv"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.0"/>
@@ -117,7 +117,7 @@
                     app:srcCompat="@drawable/ic_access_time_black_24dp"
                     android:id="@+id/imageView8"
                     app:layout_constraintStart_toStartOf="@+id/imageView7"
-                    app:layout_constraintTop_toBottomOf="@+id/agent_address" android:layout_marginTop="44dp"
+                    app:layout_constraintTop_toBottomOf="@+id/address_tv" android:layout_marginTop="44dp"
             />
             <TextView
                     android:text="24-Hour"
@@ -128,7 +128,7 @@
                     android:layout_marginStart="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/agent_address"/>
+                    android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/address_tv"/>
 
             <ImageView
                     android:layout_width="50dp"
