--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/bottom_sheet_currency"
         android:layout_width="match_parent"
@@ -96,7 +97,7 @@
                     android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.003"/>
+                    app:layout_constraintHorizontal_bias="0.004" android:layout_marginTop="12dp"/>
 
             <TextView
                     android:text="CONNECT"
@@ -109,7 +110,7 @@
                     app:layout_constraintStart_toStartOf="@+id/textView2"
                     app:layout_constraintEnd_toEndOf="@+id/textView2"
                     app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginTop="8dp"/>
+            />
 
             <TextView
                     android:text="More ways to bank."
@@ -118,7 +119,6 @@
                     android:textSize="15sp"
                     android:textColor="#E40E21"
                     android:id="@+id/textView5"
-                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
                     app:layout_constraintStart_toStartOf="@+id/textView3"
                     app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -187,8 +187,8 @@
 
             <android.support.v7.widget.RecyclerView
                     android:nestedScrollingEnabled="false"
-                    android:layout_width="354dp"
-                    android:layout_height="300dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="@+id/constraint2"
                     android:id="@+id/service_recycler"
                     app:layout_constraintTop_toBottomOf="@+id/constraint2" android:layout_marginTop="20dp"
@@ -400,7 +400,7 @@
             <ImageView
                     android:layout_width="302dp"
                     android:layout_height="70dp" app:srcCompat="@drawable/kbz_logo"
-                    android:id="@+id/imageView4" android:layout_marginTop="60dp"
+                    android:id="@+id/imageView4" android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/service_recycler"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
