--- a/app/src/main/res/layout/currency_list_item.xml
+++ b/app/src/main/res/layout/currency_list_item.xml
@@ -3,46 +3,52 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         tools:context=".ui.activities.MainActivity"
         tools:layout_editor_absoluteY="-75dp"
         tools:layout_editor_absoluteX="26dp">
 
 
     <ImageView
-            android:layout_width="104dp"
-            android:layout_height="96dp" app:srcCompat="@drawable/kbzconnect"
+            android:layout_width="100dp"
+            android:layout_height="100dp" app:srcCompat="@drawable/kbzconnect"
             android:id="@+id/service_iv" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
     <TextView
             android:text="TextView"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
             android:id="@+id/service_desc_tv"
+            android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.272"
-            app:layout_constraintTop_toBottomOf="@+id/service_title_tv"/>
+            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.058"
+            app:layout_constraintTop_toBottomOf="@+id/service_title_tv" android:layout_marginTop="8dp"/>
     <TextView
             android:text="learn more"
             android:layout_width="100dp"
             android:layout_height="22dp"
             android:id="@+id/textView12"
-            android:textColor="#2BEED7"
+            android:textColor="#0054A6"
             app:layout_constraintTop_toBottomOf="@+id/service_desc_tv"
-            app:layout_constraintStart_toStartOf="@+id/service_desc_tv" app:layout_constraintEnd_toEndOf="@+id/service_desc_tv"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintStart_toStartOf="@+id/service_desc_tv"
+            app:layout_constraintEnd_toEndOf="@+id/service_desc_tv"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:id="@+id/service_title_tv"
-            app:layout_constraintTop_toTopOf="@+id/service_iv" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/service_iv"
+            android:textSize="20sp"
+            android:textColor="#000"
+            app:layout_constraintTop_toTopOf="@+id/service_iv"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.04" app:layout_constraintBottom_toTopOf="@+id/service_desc_tv"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.004"
+    />
 </android.support.constraint.ConstraintLayout>
