--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -82,7 +82,8 @@
                     android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="16dp"
-                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="32dp"
                     app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
@@ -191,8 +192,9 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="@+id/constraint2"
                     android:id="@+id/service_recycler"
-                    app:layout_constraintTop_toBottomOf="@+id/constraint2" android:layout_marginTop="20dp"
-                    app:layout_constraintStart_toStartOf="@+id/constraint2" app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintTop_toBottomOf="@+id/constraint2" android:layout_marginTop="40dp"
+                    app:layout_constraintStart_toStartOf="@+id/constraint2"
+            />
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
