--- a/app/src/main/res/layout/currency_list_item.xml
+++ b/app/src/main/res/layout/currency_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,16 +11,19 @@
 
 
     <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp" app:srcCompat="@drawable/kbzconnect"
-            android:id="@+id/service_iv" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_width="150dp"
+            android:layout_height="150dp" app:srcCompat="@drawable/kbzconnect"
+            android:id="@+id/service_iv"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="24dp"/>
     <TextView
             android:text="TextView"
-            android:layout_width="260dp"
-            android:layout_height="wrap_content"
+            android:maxLines="3"
+            android:layout_width="210dp"
+            android:layout_height="70dp"
             android:id="@+id/service_desc_tv"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
@@ -36,19 +40,20 @@
             app:layout_constraintTop_toBottomOf="@+id/service_desc_tv"
             app:layout_constraintStart_toStartOf="@+id/service_desc_tv"
             app:layout_constraintEnd_toEndOf="@+id/service_desc_tv"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:text="TextView"
-            android:layout_width="250dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:id="@+id/service_title_tv"
             android:textSize="20sp"
             android:textColor="#000"
             app:layout_constraintTop_toTopOf="@+id/service_iv"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.004"
-    />
+            app:layout_constraintHorizontal_bias="0.063"
+            android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
