--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -158,7 +158,7 @@
                         android:layout_width="40dp"
                         android:layout_height="30dp"
                         app:srcCompat="@drawable/ic_search_black_24dp"
-                        android:id="@+id/imageView12"
+                        android:id="@+id/back_iv"
                         android:layout_marginTop="8dp"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginBottom="8dp"
@@ -176,7 +176,7 @@
                         android:id="@+id/textView13"
                         android:layout_marginEnd="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView12"
+                        app:layout_constraintStart_toEndOf="@+id/back_iv"
                         android:layout_marginStart="8dp"
                         app:layout_constraintHorizontal_bias="0.0"
                         android:layout_marginTop="8dp"
@@ -414,7 +414,7 @@
                     android:gravity="center"
                     android:textColor="#C09C9C"
                     android:textSize="15sp"
-                    android:id="@+id/textView11"
+                    android:id="@+id/title"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toStartOf="parent"
