--- a/app/src/main/res/layout/atm_list_item.xml
+++ b/app/src/main/res/layout/atm_list_item.xml
@@ -60,7 +60,7 @@
             android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/time"
+            android:id="@+id/time_tv"
             app:layout_constraintTop_toBottomOf="@+id/address_tv"
             app:layout_constraintStart_toStartOf="@+id/address_tv"
             app:layout_constraintEnd_toEndOf="@+id/address_tv"
@@ -80,6 +80,6 @@
             android:scaleType="center"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/time"/>
+            app:layout_constraintTop_toBottomOf="@+id/time_tv"/>
 
 </android.support.constraint.ConstraintLayout>
